# OAWP

./: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README.md  setup.sh
.config/oawp/: oawp.conf
.github/workflows/: build-test.yml
assets/.config/oawp/: oawp.conf
assets/icons/: OAWP_logo_v2.FCStd
cmake/modules/: AddGitHash.cmake  FindImlib2.cmake  FindPCRE.cmake  FindWayland.cmake  Findlibconfig.cmake
docs/: Doxyfile.in
icons/: OAWP_logo_v1.FCStd
include/: arg.h  dir-checker.h  dir-handler.h  fancy-text.h  fit.h  info.h  log.h  oawp.h  pixmanip.h  sig-handlers.h
sh/: chkroot.sh  cmake.sh  dev_build.sh  dev_test.sh  install_config.sh  logging.sh  prepare.sh
src/: CMakeLists.txt  arg.c  arg.h  dir-checker.c  dir-checker.h  dir-handler.c  fancy-text.c  fancy-text.h  fit.c  info.h  log.c  oawp.c  oawp.h  pixmanip.c  sig-handlers.c
tests/: README.md  test-im-paths.c  test_static_16-9_1920x1080_v1.cfg  test_template.cfg
